--- a/index.css
+++ b/index.css
@@ -87,6 +87,7 @@ body{
     font: 400 100px/1.3 'Lobster Two', Helvetica, sans-serif;
     color: #2b2b2b;
     text-shadow: 1px 1px 0px #ededed, 4px 4px 0px rgba(0,0,0,0.15);
+    font-family: unset;
 }
 
 
