--- a/des.css
+++ b/des.css
@@ -1,3 +1,12 @@
+body{
+  background-color: white;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  background-image: url(https://images-na.ssl-images-amazon.com/images/I/C1qmG3fnRpS.png);
+  backdrop-filter: blur(6px);
+  backdrop-filter: brightness(-100px);
+  background-size:50% !important; 
+  }
+
 .box-shadow {
     box-shadow: 0px 0px 18px -3px rgba(143, 143, 143, 0.5);
   }
@@ -102,6 +111,13 @@
     overflow: hidden;
     padding-top: 2rem;
     padding-bottom: 2rem;
+    padding-left: 0.3rem;
+    padding-right: 0rem;
+    letter-spacing: 0.2rem;
+    font-size: 27px;
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    animation: gradient 15s ease infinite;
+    background-size: 400% 400%;
   }
   .card .btn {
     font-weight: bold;
@@ -138,8 +154,11 @@
     margin-bottom: 2rem;
   }
   .card-animate .card-title {
-    font-weight: 900;
+    font-weight: 400;
     text-transform: uppercase;
+    color: white;
+    font-family: monospace;
+    font-size: 20px;
   }
   
    /* side names */
