--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
   
 body{
     background-color: white;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: fantasy;
     background-image: url(https://images-na.ssl-images-amazon.com/images/I/C1qmG3fnRpS.png);
     backdrop-filter: blur(6px);
     backdrop-filter: brightness(-50px);
@@ -52,8 +52,9 @@ body{
 
 .ott{
     color: #007b5e;
-    font-weight: 500;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 550;
+    font-size: 25px;
+    font-family: cursive;
 }
 
 
@@ -75,7 +76,7 @@ body{
   .heading-big-square {
     padding: 1rem 1rem;
     border: 0px solid black;
-    margin: 0.5rem auto 1rem auto;
+    margin: 0.5rem auto 0rem auto;
     width: 56%;
 }
   .heading-big:hover {
@@ -87,6 +88,7 @@ body{
     font: 400 100px/1.3 'Lobster Two', Helvetica, sans-serif;
     color: #2b2b2b;
     text-shadow: 1px 1px 0px #ededed, 4px 4px 0px rgba(0,0,0,0.15);
+    font-family: unset;
 }
 
 
@@ -248,6 +250,7 @@ body{
     color: white;
     background-color: black;
     border: none;
+    font-family: cursive !important;
   }
   .btn:hover {
     background-color: #0d0d0d;
@@ -320,7 +323,7 @@ body{
   /* side names */
   #mySidenav a {
     position: absolute;
-    left: -230px;
+    left: 2px;
     transition: 0.3s;
     padding: 15px 0px 15px 15px;
     width: 275px;
@@ -328,29 +331,31 @@ body{
     font-size: 15px;
     color: white;
     border-radius: 0 5px 5px 0;
+    font-weight: 300 !important;
+    font-family: cursive;
   }
   
   #mySidenav a:hover {
-    left: 0;
+    left: 12px ;
   }
   
   #about {
-    top: 20px;
+    top: 60px;
     background-color: #4CAF50;
   }
   
   #blog {
-    top: 80px;
+    top: 120px;
     background-color: #2196F3;
   }
   
   #projects {
-    top: 140px;
+    top: 180px;
     background-color: #f44336;
   }
   
   #contact {
-    top: 200px;
+    top: 240px;
     background-color: #555
   }
  
