--- a/pre.css
+++ b/pre.css
@@ -34,5 +34,19 @@
     top: 200px;
     background-color: #555
   }
- 
+  body{background-color: white;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    background-image: url(https://images-na.ssl-images-amazon.com/images/I/C1qmG3fnRpS.png);
+    backdrop-filter: blur(6px);
+    backdrop-filter: brightness(-50px);
+    background-size:50% !important; 
+    } 
   
+
+  .sub{
+    margin-bottom: 5px;
+    color: teal;
+    font-size: 20px;
+    font-weight: 400;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }  
