--- a/des.css
+++ b/des.css
@@ -118,6 +118,7 @@ body{
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     animation: gradient 15s ease infinite;
     background-size: 400% 400%;
+    text-decoration: none;
   }
   .card .btn {
     font-weight: bold;
